[package]
name = "lg-webos-client"
version = "0.4.0"
authors = ["kasper.ziemianek@gmail.com", "gavinpease@gmail.com"]
edition = "2018"
description = "LG webOS client"
readme = "README.md"
repository = "https://github.com/kziemianek/lg-webos-client"
license-file = "LICENSE"
keywords = ["lg", "webos", "bindings"]

[dependencies]
tokio-tungstenite = "0.14.0"
futures = "0.3.14"
futures-util = "0.3"
tokio = { version = "1.2.0", default-features = false, features = ["rt"] }
url = "2.1.0"
serde_json = "1.0"
serde = { version = "1.0.123", features = ["derive"]}
log = "0.4"
uuid = { version = "1.2.2", features = ["v4", "serde"]}

[dev-dependencies]
env_logger = "0.8.3"
tokio = { version = "1.2.0", default-features = false, features = ["full"] }
