[package]
name = "lg-webos-client"
version = "0.4.0"
authors = ["kasper.ziemianek@gmail.com", "gavinpease@gmail.com"]
edition = "2021"
description = "LG webOS client"
readme = "README.md"
repository = "https://github.com/kziemianek/lg-webos-client"
license-file = "LICENSE"
keywords = ["lg", "webos", "client"]

[dependencies]
tokio-tungstenite = "0.18.0"
futures = "0.3.25"
futures-util = "0.3.25"
tokio = { version = "1.24.1", default-features = false, features = ["rt"] }
url = "2.3.1"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"]}
log = "0.4.17"

[dev-dependencies]
env_logger = "0.10.0"
tokio = { version = "1.24.1", default-features = false, features = ["full"] }
