[package]
name = "lg-webos-client"
version = "0.5.0"
authors = ["kasper.ziemianek@gmail.com", "gavinpease@gmail.com"]
edition = "2021"
description = "LG webOS client"
readme = "README.md"
repository = "https://github.com/kziemianek/lg-webos-client"
license-file = "LICENSE"
keywords = ["lg", "webos", "client"]

[dependencies]
tokio-tungstenite = { version = "0.24.0", features = ["url"]}
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.40.0", default-features = false, features = ["rt"] }
url = "2.5.2"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"]}
log = "0.4.22"

[dev-dependencies]
env_logger = "0.11.5"
tokio = { version = "1.40.0", default-features = false, features = ["full"] }
